map entry decl result